added a table and one row of info

--- a/favorites.html
+++ b/favorites.html
@@ -6,7 +6,15 @@
 <body>
 	<table>
 		<thead>Gregs fat head</thead>
-		
+		<tbody>
+  			<th>First Name</th>
+  				<td>Greg</td>
+  			<th>Last Name</th>
+  				<td>Simpson</td>
+  			<th>Favorite Animal</th>
+  				<td>Dogs</td>
+
+		</tbody>	
 	</table>	
 </body>
 </html>
