Added entry for JoshCantor

--- a/favorites.html
+++ b/favorites.html
@@ -15,8 +15,12 @@
   					<td>Simpson</td>
   					<td>Dogs</td>
   				</tr>
-  				
-
+          <tr>
+            <td>Josh</td>
+            <td>Cantor</td>
+            <td>Hummingbird</td>
+            <td><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR_sf4qgPvyA3FSfL9pzsCyeqPkF81gjGLPf6RBafWARlDzkTpqWw" alt="hummingbird photo">
+          </tr>
 		</tbody>	
 	</table>	
 </body>
