--- a/favorites.html
+++ b/favorites.html
@@ -21,6 +21,11 @@
             <td>Hummingbird</td>
             <td><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR_sf4qgPvyA3FSfL9pzsCyeqPkF81gjGLPf6RBafWARlDzkTpqWw" alt="hummingbird photo">
           </tr>
+          <tr>  
+      <td>Alex</td>
+      <td>Nishioki</td>
+      <td>Birds</td>
+    </tr>
 		</tbody>	
 	</table>	
 </body>
